--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,10 +9,13 @@ readme = "README.md"
 python = "^3.13"
 django = "^5.1.6"
 psycopg = "^3.2.5"
+python-dotenv = "^1.0.1"
 
 
 [tool.poetry.group.dev.dependencies]
 ipython = "^8.32.0"
+ruff = "^0.9.7"
+pre-commit = "^4.1.0"
 
 [build-system]
 requires = ["poetry-core"]
