--- a/deployments/docker-compose.yml
+++ b/deployments/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   # server:
   #   image: go_app
   #   container_name: rest_api_server
-  #   build: 
+  #   build:
   #     context: ../
   #     dockerfile: build/Dockerfile
   #   command: ./rest_api -env docker
@@ -12,14 +12,14 @@ services:
   #     - db
 
   db:
-    image: postgres:latest
+    image: postgres:16
     container_name: local_pgdb
     # restart: always
     ports:
       - "54320:5432"
     environment:
       POSTGRES_USER: user
-      POSTGRES_PASSWORD: admin
+      POSTGRES_PASSWORD: admin # pragma: allowlist secret
     volumes:
       - local_pgdata:/var/lib/postgresql/data
 
@@ -31,7 +31,7 @@ services:
       - "5050:80"
     environment:
       PGADMIN_DEFAULT_EMAIL: raj@nola.com
-      PGADMIN_DEFAULT_PASSWORD: admin
+      PGADMIN_DEFAULT_PASSWORD: admin # pragma: allowlist secret
     volumes:
       - pgadmin-data:/var/lib/pgadmin
 
